# Android-CRV

./: .gitignore  README.md
app/: build.gradle
app--iOS-CRV/iOS-CRV/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
app--iOS-CRV/iOS-CRV.xcodeproj/: project.pbxproj
app--iOS-CRV/iOS-CRV.xcodeproj/project.xcworkspace/xcuserdata/thomashaywooddadzie.xcuserdatad/: UserInterfaceState.xcuserstate
app--iOS-CRV/iOS-CRV.xcodeproj/xcshareddata/xcschemes/: iOS-CRV__Debug.xcscheme  iOS-CRV__Release.xcscheme
app--iOS-CRV/iOS-CRV.xcodeproj/xcuserdata/thomashaywooddadzie.xcuserdatad/xcschemes/: xcschememanagement.plist
app--iOS-CRV/iOS-CRV/Base.lproj/: Main.storyboard
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/libsnark/depends/libff/libff/common/: profiling.cpp  profiling.hpp
app/src/main/cpp/libsnark/libsnark/gadgetlib2/: integration.cpp  variable.cpp  variable.hpp
app/src/main/cpp/libsnark/libsnark/jsnark_interface/: CircuitReader.cpp  CircuitReader.hpp
app/src/main/cpp/libsnark/libsnark/zk_proof_systems/ppzksnark/voting/: run_r1cs_gg_ppzksnark.tcc
app/src/main/java/com/example/snarkportingtest/: BigIntegerAffinePoint.java  BigIntegerEC.java  EncActivity.java  MainActivity.java  SubActivity.java  UsermainActivity.java  UsersignupActivity.java  VoteActivity.java  makevoteinput.java
app/src/main/java/makeinputs/: voteInput.java
app/src/main/res/layout/: activity_sub.xml  activity_usermain.xml
library--zkSnark/archive-debug/: README.md
library--zkSnark/native/: CMakeLists.txt  Makefile  snark.options.cmake
library--zkSnark/native/libsnark/gadgetlib2/: integration.cpp  integration.hpp
library--zkSnark/native/libsnark/jsnark_interface/: CircuitReader.cpp  CircuitReader.hpp
library--zkSnark/native/libsnark/zk_proof_systems/ppzksnark/voting/: r1cs_gg_ppzksnark.cpp  r1cs_gg_ppzksnark.hpp  run_r1cs_gg_ppzksnark.cpp  run_r1cs_gg_ppzksnark.hpp
library--zkSnark/swift-interface/: Package.swift  README.md
library--zkSnark/swift-interface/Headers/: Bridging-Header.h
library--zkSnark/swift-interface/Sources/native_libsnark/: module.modulemap
library--zkSnark/swift-interface/Sources/zkSnark/: zkSnark.swift
library--zkSnark/wrapper/: Makefile  logging.hpp  wrapper.cpp  wrapper.h
